Closed
Bug 386158
Opened 18 years ago
Closed 17 years ago
Sending receipt fails but no warning returns to user
Categories
(Thunderbird :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3
People
(Reporter: lijuan1.wang, Assigned: eagle.lu)
Details
Attachments
(1 file, 3 obsolete files)
|
3.22 KB,
patch
|
dmosedale
:
superreview+
|
Details | Diff | Splinter Review |
Reproduced steps:
You'll need two mail accounts to test this. The 1st mail account can both send and receive mails successfully, while the 2nd mail account can only receive mails because of the uncorrect configuration of its smtp server.
1. Send a mail from 2nd mail account to 1st one.
2. In the 1st mail account, Account settings->Return Receipts, make sure you have turned ON "When sending messages, always request a return receipt."
3. In the 2nd mail account, go to Account settings->Return Receipts
4. In the section for "When I receive a request for a return receipt" select the radio button for "Allow return receipts for some messages."
5. For all of the corresponding droplists, select "Ask me."
6. Hit OK, OK/Close to save your changes and dismiss the Prefs.
7. Send email from the 1st mail account to 2nd one
8. From the 2nd mail account, read that message and allow the return receipt to be sent to the 1st mail account.
Actual results:
After step#1: Pop out a Warning dialog as "Send Message Error",Sending of message failed. An error occurred sending mail: Unable to connect to SMTP server..........
After step#8:No warning dialog and 1st mail account didn't receive the reciept from 2nd mail account.The user will consider that he has sent the receipt successfully.
Expected results:
After step#8: Pop out the similar warning dialog as the result of step#1.The user will know that he fails to send out the receipt.
| Reporter | ||
Updated•18 years ago
|
Summary: Send receipt fail but no warning returns to user → Sending receipt fails but no warning returns to user
Comment 1•17 years ago
|
||
Not only a Solaris bug, but exist on all platform.
OS: Solaris → All
Hardware: Sun → All
The last 2 rv assignments are never used after.
We can use
if (dialog)
instead of
if (NS_SUCCEEDED(rv))
Attachment #327367 -
Attachment is obsolete: true
Attachment #327367 -
Flags: review?(bienvenu)
Attachment #327371 -
Flags: review?(bienvenu)
Comment 5•17 years ago
|
||
Comment on attachment 327371 [details] [diff] [review]
patch
This looks good; However, I looked at MsgMdnFailed=A failure occurred. A proper return receipt could not be generated or sent to you.
and I believe that text is a little wrong - the return receipt isn't sent "to you". It's sent "from you" or "on your behalf" or just "sent." :-)
If it's because of an account configuration issue, we might want to indicate that in the error message as well.
Attachment #327371 -
Flags: review?(bienvenu) → review+
(In reply to comment #5)
> (From update of attachment 327371 [details] [diff] [review])
> This looks good; However, I looked at MsgMdnFailed=A failure occurred. A proper
> return receipt could not be generated or sent to you.
>
> and I believe that text is a little wrong - the return receipt isn't sent "to
> you". It's sent "from you" or "on your behalf" or just "sent." :-)
>
> If it's because of an account configuration issue, we might want to indicate
> that in the error message as well.
>
I didn't use "MsgMdnFailed" in my patch,I use MsgMdnFailedReceipt instead which is "Return Receipt (failed)". Though it is not accurate error message, it's the most proper message I could find
Attachment #327371 -
Flags: superreview?(dmose)
Comment 7•17 years ago
|
||
Comment on attachment 327371 [details] [diff] [review]
patch
If we're bothering to fix this, we should give it a useful error message. If this means adding another error message, so be it.
Attachment #327371 -
Flags: superreview?(dmose) → superreview-
Attachment #327371 -
Attachment is obsolete: true
Display more useful error message
Attachment #327756 -
Flags: review?(dmose)
Attachment #327756 -
Flags: review?(dmose) → review?(bienvenu)
Comment 9•17 years ago
|
||
Comment on attachment 327756 [details] [diff] [review]
new patch
thx for the patch. It would be nice if the smtp service provided this capability, but it doesn't look trivial to carve out the code...
Attachment #327756 -
Flags: review?(bienvenu) → review+
Attachment #327756 -
Flags: superreview?(dmose)
Comment 10•17 years ago
|
||
The indention of the middle block is a space off.
Attachment #327756 -
Flags: superreview?(dmose)
| Assignee | ||
Comment 11•17 years ago
|
||
Attachment #328625 -
Flags: superreview?(dmose)
Comment 12•17 years ago
|
||
Comment on attachment 328625 [details] [diff] [review]
remove extra space
sr=dmose; thanks for the patch.
Attachment #328625 -
Flags: superreview?(dmose) → superreview+
Comment 13•17 years ago
|
||
It's not fixed yet, if checkin-needed.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 14•17 years ago
|
||
Checking in mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp;
/cvsroot/mozilla/mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp,v <-- nsMsgMdnGenerator.cpp
new revision: 1.35; previous revision: 1.34
done
Status: REOPENED → RESOLVED
Closed: 17 years ago → 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3
Updated•17 years ago
|
Attachment #327756 -
Attachment is obsolete: true
You need to log in
before you can comment on or make changes to this bug.
Description
•