Bug 386158 Sending receipt fails but no warning returns to user. p=Boying Lu <brian.lu@sun.com>,r=bienvenu,sr=dmose